<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Мобильный смотритель</string>
    <string name="action_settings">Настройки</string>
    <string name="action_next_point">К след. могиле</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_get">Загрузить</string>
    <string name="action_upload">Отправить</string>
    <string name="action_remove">Удалить</string>
    <string name="action_burial_plan">План захоронений</string>
    <string name="settings_title">Настройки</string>    
    <string name="place_search_activity">Поиск старого места по фамилии</string>
    <string name="square">Площадь(м2): %s</string>
    <string name="new_grave_name">Новая могила</string>
    <string name="burial_bind">Прикрепить</string>
    <string name="burial_unbind">Открепить</string>
    <string name="burial_close">Закрыть</string>
    <string name="unauthorize_user">Неавторизированный пользователь</string>
    <string name="burial_plan_activity_title">Мобильный смотритель(План захоронений)</string>
    <string name="metr">м.</string>
    
    
    <string name="cb_place_is_unowner">  Заброшенное место</string>
    <string name="cb_place_is_wrong_fio">  ФИО не совпадает</string>
    <string name="cb_place_is_military">  Воинская могила</string>
    <string name="cb_place_is_size_violated">  Нарушения размеров</string>
    <string name="cb_place_is_unindentified">  Неопознанное</string>
    
    
    
    <string name="turnOnGPSQuestion">Для корректной работы программы вам необходимо включить GPS. Включить GPS?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="notDetectGPS">Еще не удалось определить координаты GPS. Подождите некоторое время, затем сделайте фотографию.(Для определения координат GPS вам необходимо выйти в открытое место)</string>
    <string name="deleteSendedMonumentQuestion">Вы действительно хотите удалить все данные с телефона?</string>
    <string name="deleteItemQuestion">Вы действительно хотите удалить %s?</string>
    
    <string name="serverStatusDefault">Для определения доступности сервера нажмите кнопку "Проверить".</string>
    <string name="serverStatusUnavalaible">Сервер не доступен. Пожалуйста, проверьте соединение с интернетом.</string>
    <string name="serverStatusLoginFailed">Логин или пароль неверны.</string>
    <string name="serverStatusLoginSuccess">Авторизация прошла успешно</string>
    <string name="serverAutorisationProggress">Идет процесс авторизации. Подождите...</string>
    
    
    <string name="photo_not_found">Фото удалено</string>
    <string name="photo_downloading">Идет загрузка</string>
    <string name="photo_download_error">Ошибка загрузки</string>
    <string name="photo_create_thumbnail_error">Ошибка создания миниатюры</string>
    
    
    <string name="crash_toast_text">Пожалуйста, отправьте сообщение об ошибке разработчику</string>
	<string name="crash_dialog_title">Приложение остановлено</string>
	<string name="crash_dialog_text">Произошла непредвиденная ошибка. Пожалуйста, сообщите об этом разработчикам, нажав кнопку OK.</string>
	<string name="crash_dialog_comment_prompt">Вы также можете оставить свой комментарий</string>
	<string name="crash_dialog_ok_toast">Спасибо!</string>
    
</resources>