<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_burial_plan"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/burial_plan"
        android:title="@string/action_burial_plan"/>
    <item
        android:id="@+id/action_get"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_load"        
        android:title="@string/action_get"/>
    <item
        android:id="@+id/action_upload"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_sync"
        android:title="@string/action_upload"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_preferences"                
        android:title="@string/action_settings"/>
</menu>